# Electro_RaceCar

./: 2022上海市大学生电子设计竞赛Amazon DeepRacer开源创新赛题.docx
deepracer_multi/: 备注.txt
deepracer_multi/deepracer_workspace/devel/: .catkin
deepracer_multi/deepracer_workspace/src/pkg/: CMakeLists.txt
deepracer_multi/deepracer_workspace/src/raceworld/: CMakeLists.txt
deepracer_multi/deepracer_workspace/src/raceworld/launch/: follow.launch  racecars.launch  raceworld.launch
deepracer_multi/deepracer_workspace/src/raceworld/scripts/: lane.py
deepracer_multi/deepracer_workspace/src/raceworld/scripts/platoon/: leader.cpp  main.cpp  pure.cpp
deepracer_multi/deepracer_workspace/src/raceworld/worlds/: raceworld1.world  raceworld2.world
deepracer_single/devel/: .catkin  .rosinstall  local_setup.sh
deepracer_single/devel/lib/pkgconfig/: raceworld.pc
deepracer_single/src/raceworld/: CMakeLists.txt  package.xml
deepracer_single/src/raceworld/launch/: display.launch  gazebo.launch
deepracer_single/src/raceworld/models/ssdlite_FP32/: ssdlite_mobilenet_v2.mapping
deepracer_single/src/raceworld/models/tagcode/: model.config  model.sdf
deepracer_single/src/raceworld/models/tagcode/materials/scripts/: tagcode1.material  tagcode10.material  tagcode11.material  tagcode12.material  tagcode13.material  tagcode14.material  tagcode15.material  tagcode16.material  tagcode17.material  tagcode18.material  tagcode19.material  tagcode2.material  tagcode20.material  tagcode3.material  tagcode4.material  tagcode5.material  tagcode6.material  tagcode7.material  tagcode8.material  tagcode9.material
deepracer_single/src/raceworld/scripts/camera/: cam_raw.py  get_camera.py
deepracer_single/src/raceworld/scripts/control/: Key_Cam.py  lane.py  lane_sim.py
deepracer_single/src/raceworld/scripts/tag_locate/: tag_detect copy.py
deepracer_single/src/raceworld/urdf/: deepracer.xacro  raceworld.csv  raceworld.urdf
models/ssdlite_FP16/: ssdlite_mobilenet_v2.xml
models/ssdlite_mobilenet_v2/FP32/: ssdlite_mobilenet_v2.xml
(+19 files in other folders)
